tests/error/polar_invalid_mod.gw
// [contains] polar value #1
 %(NULL, 0);
